# ormuco-workshop

./: README.md  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml
api/common/: service.py
api/domain/: schema.py
api/domain/auth/: resolver.py  service.py
api/domain/flavor/: resolver.py  service.py
api/domain/image/: resolver.py  service.py
api/domain/network/: resolver.py  service.py
api/helpers/: utils.py
api/interfaces/: flavors.py  images.py  instance.py  networks.py  users.py
asinble/: asinble.cfg  host-dev  playbook.yml
client/: Dockerfile  codegen.ts  package.json  prettier.config.js  remix.config.js  server.js
client/app/: root.tsx
client/app/components/InstanceForm/: InstanceForm.tsx  types.ts
client/app/components/LoginForm/: LoginForm.tsx
client/app/components/Nav/: Nav.tsx
client/app/gql/: types.ts
client/app/graphql/: schema.graphql
client/app/routes/: __app.tsx
client/app/routes/__app/: index.tsx  login.tsx
client/app/services/: auth.server.ts  session.server.ts  users.server.ts  validations.ts
client/app/utils/: index.ts
